# rf

./: .gitignore  __main__.py  basic.py  classes.py  client.py  client_fft.py  client_multiprocessing.py  client_recording.py  config.ini  dark.mplstyle  fft.py  main.py  pyproject.toml  requirements.txt  server.py  server_command.py  test.py
rf-react/: main.py
src/rf/: __init__.py  __main__.py  bridge.py  classes.py  client.py  serverTransceiver.py
src/rf/frontend/: main.py  server.py
src/rf/frontend/src/: App.jsx
src/rf/frontend/src/components/: FFTPlot.jsx
src/rfanalyze/: __init__.py  __main__.py  bridge.py  classes.py  client.py  fft.py  server.py  uhd_server_test.py
src/rfanalyze/config/: config.ini
src/rfanalyze/experimental/: fft.py
testing/: main.py  realtime.py  record.py  server_multiple_clients.py
