[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rfanalyze"
version = "0.1.0"
dependencies = [
  "numpy",
  "matplotlib",
  "zmq",
  "pyaudio"
]

[project.scripts]
rf = "rfanalyze.__main__:main"
rf_server = "rfanalyze.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rfanalyze = ["config/*"]

[tool.setuptools]
include-package-data = true
