[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rf"
version = "0.1.0"
dependencies = ["numpy", "matplotlib", "zmq", "pyaudio"]

[project.scripts]
rf = "rf.__main__:main"
rf_server = "rf.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rf = ["config/**", "frontend/**"]

[tool.setuptools]
include-package-data = true
